# server/swagger.json
@@ -14,6 +14,14 @@
     }
   },
   "basePath": "/api/v1",
+  "securityDefinitions": {
+    "Bearer": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "id": "header",
+      "description": "Ingrese el token JWT en formato: Bearer <token>"
+    }
+  }, 
   "schemes": ["http", "https"],
   "tags": [
     {
@@ -184,18 +192,6 @@
                   "type": "string",
                   "format": "date-time",
                   "example": "2023-10-01T12:00:00Z"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "message": {
-                  "type": "string",
-                  "example": "User already exists with this email"
                 }
               }
             }
@@ -770,6 +766,7 @@
 
     "/category": {
       "get": {
+        "security": [{ "Bearer": [] }],
         "summary": "Get categorys",
         "produces": ["application/json"],
         "tags": ["category"],
@@ -805,6 +802,7 @@
     },
     "/category/create": {
       "post": {
+        "security": [{ "Bearer": [] }],
         "summary": "Create new category",
         "produces": ["application/json"],
         "tags": ["category"],
@@ -912,6 +910,39 @@
           {
             "name": "id",
             "in": "path"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "API version retrieved successfully",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Category deleted successfully"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+
+    "/auth/validSession": {
+      "post": {
+        "summary": "Delete category",
+        "produces": ["application/json"],
+        "tags": ["auth"],
+        "parameters": [
+          {
+            "name": "accessToken",
+            "in": "body",
+            "properties": {
+              "accessToken": {
+                "type": "string"
+              }
+            }
           }
         ],
         "responses": {
